# minimalist-stack

./: .envrc.example  .gitignore  README.md  litestream.yml  pyproject.toml
server/: main.py
