[tool.poetry]
name = "minimalist-stack"
version = "0.1.0"
description = ""
authors = ["Thomas Borgen <thomasborgen91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
hypermedia = "^2.0.1"
uvicorn = "^0.29.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
